# da

./: .gitignore  README.md  RELEASING.md  build-install.md  build_installer.ps1  build_linux.sh  build_macos.sh  installer_builds.md
da/: Cargo.toml
da/src/: commands.rs  db.rs  main.rs
installer/: da.nsi  path_add.ps1  path_remove.ps1  remove_shell.ps1  remove_shell.sh  setup_shell.ps1  setup_shell.sh
installer/arch/: PKGBUILD
installer/homebrew/: da.rb
