[package]
name = "da"
version = "0.4.5"
edition = "2024"
authors = ["Seth Stenzel"]
description = "Directory alias manager — map short names to paths and open them with any tool"

[[bin]]
name = "da"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
dirs = "6.0.0"
rusqlite = { version = "0.40.1", features = ["bundled"] }
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[package.metadata.deb]
maintainer = "Seth Stenzel <seth.c.stenzel@gmail.com>"
section = "utils"
priority = "optional"
assets = [["target/release/da", "usr/bin/", "755"]]
